Sync recent changes from original repository (#2)